--- a/presentation.html
+++ b/presentation.html
@@ -91,7 +91,7 @@
     <footer>
         <div class="footer">
             <div class="description">
-                <p> Voyage est une agence spécialisé dans le voyage sur-mesure en Amérique du Nord,  Latine, en Asie et en Europe. Voyagez comme vous l’imaginez avec Voyage.</p>
+                <p> Wanderer est une agence spécialisé dans le voyage sur-mesure en Amérique du Nord,  Latine, en Asie et en Europe. Voyagez comme vous l’imaginez avec Voyage.</p>
             </div>
             <div class="description">
                 <p>NEWSLETTER</p>
@@ -103,7 +103,7 @@
                 <p>info@al-voyage.com</p>
             </div>
         </div>
-        <p class="droit">Jérome LACROIX,Félix HAUGIER,Ibni-Yamine CHABANE,Fériale BOUREGA, Joris Landaret,formation Start</p>
+        <p class="droit">Jérome LACROIX,Félix HAUGIER,Ibni-Yamine CHABANE,Fériale BOUREGA, Joris LANDARET,formation Start</p>
     </footer>
   </body>
 </html>
