--- a/grèce.html
+++ b/grèce.html
@@ -5,7 +5,7 @@
     <title>La Grèce</title>
     <link rel="stylesheet" href="css/voyages.css">
     <link href="css/grèce.css" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="style/footer.css">
+    <link rel="stylesheet" href="css/footer.css">
   </head>
 
   <body>
