petite modif du footer et ajout du header + footer à la page contact

--- a/footer.html
+++ b/footer.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style/footer.css">
+    <link rel="stylesheet" href="css/footer.css">
     <title>Document</title>
 </head>
 <body>
     <footer>
         <div class="footer">
             <div class="description">
-                <p> Voyage est une agence spécialisé dans le voyage sur-mesure en Amérique du Nord,  Latine, en Asie et en Europe. Voyagez comme vous l’imaginez avec Voyage.</p>
+                <p><span class="mark">Wanderer</span> est une agence spécialisé dans le voyage sur-mesure en Amérique du Nord,  Latine, en Asie et en Europe. Voyagez comme vous l’imaginez avec Voyage.</p>
             </div>
             <div class="description">
                 <p>NEWSLETTER</p>
@@ -23,7 +23,7 @@
                 <p>info@al-voyage.com</p>
             </div>
         </div>
-        <p class="droit">Jérome LACROIX,Félix HAUGIER,Ibni-Yamine CHABANE,Fériale BOUREGA, Joris Landaret,formation Start</p>
+        <p class="droit">Jérome LACROIX,Félix HAUGER,Ibni-Yamine CHABANE,Fériale BOUREGA, Joris LANDARET,formation Start</p>
     </footer>
     
 </body>
