--- a/grèce.html
+++ b/grèce.html
@@ -262,7 +262,7 @@
     <footer>
       <div class="footer">
           <div class="description">
-              <p> Wanderer est une agence spécialisé dans le voyage sur-mesure en Amérique du Nord,  Latine, en Asie et en Europe. Voyagez comme vous l’imaginez avec Voyage.</p>
+              <p><span class="mark">Wanderer</span> est une agence spécialisé dans le voyage sur-mesure en Amérique du Nord,  Latine, en Asie et en Europe. Voyagez comme vous l’imaginez avec Voyage.</p>
           </div>
           <div class="description">
               <p>NEWSLETTER</p>
