--- a/presentation.html
+++ b/presentation.html
@@ -5,7 +5,7 @@
     <title>Wanderer</title>
     <link href="css/style-presentation.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="css/voyages.css">
-    <link rel="stylesheet" href="style/footer.css">
+    <link rel="stylesheet" href="css/footer.css">
   </head>
 
   <body>
@@ -91,7 +91,7 @@
     <footer>
         <div class="footer">
             <div class="description">
-                <p> Wanderer est une agence spécialisé dans le voyage sur-mesure en Amérique du Nord,  Latine, en Asie et en Europe. Voyagez comme vous l’imaginez avec Voyage.</p>
+                <p><span class="mark">Wanderer</span> est une agence spécialisé dans le voyage sur-mesure en Amérique du Nord,  Latine, en Asie et en Europe. Voyagez comme vous l’imaginez avec Voyage.</p>
             </div>
             <div class="description">
                 <p>NEWSLETTER</p>
@@ -103,7 +103,7 @@
                 <p>info@al-voyage.com</p>
             </div>
         </div>
-        <p class="droit">Jérome LACROIX,Félix HAUGIER,Ibni-Yamine CHABANE,Fériale BOUREGA, Joris LANDARET,formation Start</p>
+        <p class="droit">Jérome LACROIX,Félix HAUGER,Ibni-Yamine CHABANE,Fériale BOUREGA, Joris LANDARET,formation Start</p>
     </footer>
   </body>
 </html>
