--- a/salvador.html
+++ b/salvador.html
@@ -79,7 +79,7 @@
             <div class="description">
                 <p class="contacte">Contact france</p>
                 <p>04 50 46 90 28</p>
-                <p>info@al-voyage.com</p>
+                <p>info@wanderer.io</p>
             </div>
         </div>
         <p class="droit">Jérome Lacroix formation Start</p>
