--- a/footer.html
+++ b/footer.html
@@ -11,19 +11,19 @@
     <footer>
         <div class="footer">
             <div class="description">
-                <p><span class="mark">Wanderer</span> est une agence spécialisé dans le voyage sur-mesure en Amérique du Nord,  Latine, en Asie et en Europe. Voyagez comme vous l’imaginez avec Voyage.</p>
+                <p><span class="mark">Wanderer</span> est une agence spécialisé dans le voyage sur-mesure en Amérique du Nord,  Latine, en Asie et en Europe. Voyagez comme vous l’imaginez avec <span class="mark">Wanderer</span>.</p>
             </div>
             <div class="description">
                 <p>NEWSLETTER</p>
                 <a class="newlester" href="">je m'inscris a la newslester</a>
             </div>
-            <div class="description">
+            <address class="description">
                 <p class="contacte">Contact france</p>
                 <p>04 50 46 90 28</p>
-                <p>info@al-voyage.com</p>
-            </div>
+                <p>info@wanderer.io</p>
+            </address>
         </div>
-        <p class="droit">Jérome LACROIX,Félix HAUGER,Ibni-Yamine CHABANE,Fériale BOUREGA, Joris LANDARET,formation Start</p>
+        <p class="droit">Jérome LACROIX, Félix HAUGER, Ibni-Yamine CHABANE, Fériale BOUREGA, Joris LANDARET, formation Start</p>
     </footer>
     
 </body>
