--- a/grèce.html
+++ b/grèce.html
@@ -262,7 +262,7 @@
     <footer>
       <div class="footer">
           <div class="description">
-              <p><span class="mark">Wanderer</span> est une agence spécialisé dans le voyage sur-mesure en Amérique du Nord,  Latine, en Asie et en Europe. Voyagez comme vous l’imaginez avec Voyage.</p>
+              <p><span class="mark">Wanderer</span> est une agence spécialisé dans le voyage sur-mesure en Amérique du Nord,  Latine, en Asie et en Europe. Voyagez comme vous l’imaginez avec <span class="mark">Wanderer</span>.</p>
           </div>
           <div class="description">
               <p>NEWSLETTER</p>
@@ -274,7 +274,7 @@
               <p>info@al-voyage.com</p>
           </div>
       </div>
-      <p class="droit">Jérome LACROIX,Félix HAUGIER,Ibni-Yamine CHABANE,Fériale BOUREGA, Joris LANDARET,formation Start</p>
+      <p class="droit">Jérome LACROIX, Félix HAUGIER, Ibni-Yamine CHABANE, Fériale BOUREGA, Joris LANDARET, formation Start</p>
   </footer>
   </body>
 </html>
