--- a/japon.html
+++ b/japon.html
@@ -18,13 +18,22 @@
                     <li>
                         <a href="">Continents</a>
                         <ul class="sous-menu">
-                            <li><a class="btn-transition" href="europe.html">Europe</a></li>
-                            <li><a class="btn-transition" href="asie.html">Asie</a></li>
-                            <li><a class="btn-transition" href="amerique-centrale.html">Amérique Centrale</a></li>
-                            <li><a class="btn-transition" href="outre-mer.html">Outre-Mer</a></li>
+                            <li><a class="" href="europe.html">Europe</a></li>
+                            <li><a class="" href="asie.html">Asie</a></li>
+                            <li><a class="" href="amerique-centrale.html">Amérique Centrale</a></li>
+                            <li><a class="" href="outre-mer.html">Outre-Mer</a></li>
                         </ul>
                     </li>
-                    <li><a href="">Wanderers</a></li>
+                    <li>
+                        <a href="">Wanderers</a>
+                        <ul class="sous-menu">
+                            <li><a class="btn-transition" href="france.html">Félix</a></li>
+                            <li><a class="btn-transition" href="polynesie.html">Fériale</a></li>
+                            <li><a class="btn-transition" href="japon.html">Ibni</a></li>
+                            <li><a class="btn-transition" href="salvador.html">Jérôme</a></li>
+                            <li><a class="btn-transition" href="grece.html">Joris</a></li>
+                        </ul>
+                    </li>
                     <li><a href="">Contact</a></li>
                 </ul>
             </nav>
