--- a/japon.html
+++ b/japon.html
@@ -18,20 +18,20 @@
                     <li>
                         <a href="">Continents</a>
                         <ul class="sous-menu">
-                            <li><a class="" href="europe.html">Europe</a></li>
-                            <li><a class="" href="asie.html">Asie</a></li>
-                            <li><a class="" href="amerique-centrale.html">Amérique Centrale</a></li>
-                            <li><a class="" href="outre-mer.html">Outre-Mer</a></li>
+                            <li><a href="europe.html">Europe</a></li>
+                            <li><a href="asie.html">Asie</a></li>
+                            <li><a href="amerique-centrale.html">Amérique Centrale</a></li>
+                            <li><a href="outre-mer.html">Outre-Mer</a></li>  
                         </ul>
                     </li>
                     <li>
                         <a href="">Wanderers</a>
                         <ul class="sous-menu">
-                            <li><a class="btn-transition" href="france.html">Félix</a></li>
-                            <li><a class="btn-transition" href="polynesie.html">Fériale</a></li>
-                            <li><a class="btn-transition" href="japon.html">Ibni</a></li>
-                            <li><a class="btn-transition" href="salvador.html">Jérôme</a></li>
-                            <li><a class="btn-transition" href="grece.html">Joris</a></li>
+                            <li><a href="france.html">Félix</a></li>
+                            <li><a href="polynesie.html">Fériale</a></li>
+                            <li><a href="japon.html">Ibni</a></li>
+                            <li><a href="salvador.html">Jérôme</a></li>
+                            <li><a href="grece.html">Joris</a></li>
                         </ul>
                     </li>
                     <li><a href="">Contact</a></li>
@@ -531,7 +531,23 @@
              <p>Bon Voyage</p>
         </section>
     </main>
-    <footer></footer>    
+    <footer>
+        <div class="footer">
+            <div class="description">
+                <p> Voyage est une agence spécialisé dans le voyage sur-mesure en Amérique du Nord,  Latine, en Asie et en Europe. Voyagez comme vous l’imaginez avec Voyage.</p>
+            </div>
+            <div class="description">
+                <p>NEWSLETTER</p>
+                <a class="newlester" href="">je m'inscris a la newslester</a>
+            </div>
+            <div class="description">
+                <p class="contacte">Contact france</p>
+                <p>04 50 46 90 28</p>
+                <p>info@al-voyage.com</p>
+            </div>
+        </div>
+        <p class="droit">Jérome LACROIX,Félix HAUGIER,Ibni-Yamine CHABANE,Fériale BOUREGA, Joris Landaret,formation Start</p>
+    </footer>    
 </body>
 </html>
 
