--- a/japon.html
+++ b/japon.html
@@ -34,7 +34,7 @@
                             <li><a href="grece.html">Joris</a></li>
                         </ul>
                     </li>
-                    <li><a href="">Contact</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
         </div>              
@@ -532,7 +532,54 @@
         </section>
     </main>
     <footer>
-        <div class="footer">
+        <div class="container-footer">
+            <div class="about-us">
+                <div class="box-logo">
+                    <img src="logo voyage 2-1.png" alt="logo wanderers">
+                </div>
+                <div class="text-about-us">
+                    <p>
+                        Wanderer est une agence Fictive spécialisé dans le voyage sur-mesure en Amérique du Nord, 
+                        Latine, en Asie et en Europe. Voyagez comme vous l’imaginez avec Voyage.
+                    </p>   
+                </div>
+            </div>
+            <div class="box-continent">
+                <h3>Continents</h3>
+                <ul>
+                    <li><a href="">Europe</a></li>
+                    <li><a href="">Asie</a></li>
+                    <li><a href="">Amerique Centrale</a></li>
+                    <li><a href="">Outre-Mer</a></li>
+                </ul>
+            </div>
+            <div class="box-wanderers">
+                <h3>Wanderers</h3>
+                <ul>
+                    <li><a href="">Félix</a></li>
+                    <li><a href="">Fériale</a></li>
+                    <li><a href="">Ibni</a></li>
+                    <li><a href="">Jérôme</a></li>
+                    <li><a href="">Joris</a></li>
+                </ul>
+            </div>
+            <div id="contact" class="footer-right">
+				<h3>Contact</h3>
+				<form action="#" method="post">
+					<input type="text" name="email" placeholder="Email">
+					<textarea name="message" placeholder="Message"></textarea>
+					<button>Envoyer</button>
+				</form>
+			</div>
+        </div>
+        <div class="not-copyright">
+            <p>Not a Copyright © 2022 All Rights Not Reserved by Wanderers.</p>
+        </div>
+    </footer>    
+</body>
+</html>
+
+<!--<div class="footer">
             <div class="description">
                 <p> Voyage est une agence spécialisé dans le voyage sur-mesure en Amérique du Nord,  Latine, en Asie et en Europe. Voyagez comme vous l’imaginez avec Voyage.</p>
             </div>
@@ -546,8 +593,4 @@
                 <p>info@al-voyage.com</p>
             </div>
         </div>
-        <p class="droit">Jérome LACROIX,Félix HAUGIER,Ibni-Yamine CHABANE,Fériale BOUREGA, Joris Landaret,formation Start</p>
-    </footer>    
-</body>
-</html>
-
+        <p class="droit">Jérome LACROIX,Félix HAUGIER,Ibni-Yamine CHABANE,Fériale BOUREGA, Joris Landaret,formation Start</p>-->
