--- a/japon.html
+++ b/japon.html
@@ -540,7 +540,7 @@
                 <div class="text-about-us">
                     <p>
                         Wanderer est une agence Fictive spécialisé dans le voyage sur-mesure en Amérique du Nord, 
-                        Latine, en Asie et en Europe. Voyagez comme vous l’imaginez avec Voyage.
+                        Latine, en Asie et en Europe. Voyagez comme vous l’imaginez avec Wanderer.
                     </p>   
                 </div>
             </div>
@@ -573,24 +573,8 @@
 			</div>
         </div>
         <div class="not-copyright">
-            <p>Not a Copyright © 2022 All Rights Not Reserved by Wanderers.</p>
+            <p>Not a Copyright © 2022 All Rights Not Reserved by Wanderer.</p>
         </div>
     </footer>    
 </body>
 </html>
-
-<!--<div class="footer">
-            <div class="description">
-                <p> Voyage est une agence spécialisé dans le voyage sur-mesure en Amérique du Nord,  Latine, en Asie et en Europe. Voyagez comme vous l’imaginez avec Voyage.</p>
-            </div>
-            <div class="description">
-                <p>NEWSLETTER</p>
-                <a class="newlester" href="">je m'inscris a la newslester</a>
-            </div>
-            <div class="description">
-                <p class="contacte">Contact france</p>
-                <p>04 50 46 90 28</p>
-                <p>info@al-voyage.com</p>
-            </div>
-        </div>
-        <p class="droit">Jérome LACROIX,Félix HAUGIER,Ibni-Yamine CHABANE,Fériale BOUREGA, Joris Landaret,formation Start</p>-->
