rangement des fichiers et images

--- a/salvador.html
+++ b/salvador.html
@@ -20,7 +20,7 @@
     <main>
         <h1>VOYAGE SALVADOR</h1>
         <section class="card">
-            <img src="img/photo1.jpg" alt="Photo de marché">
+            <img src="media/img/photo1.jpg" alt="Photo de marché">
             <div>
                 <h2 class="h2">L’ASSOCIATION VISION DU MONDE AU SALVADOR</h2>
                 <p class="cardp">Aujourd'hui, nous partons à la découverte de l'association Vision du Monde et de leur nouveau programme de parrainage au Salvador. Emilie, partie en février 2020 au Salvador pour mener cette mission à bien, nous raconte son expérience. Pouvez-vous vous présenter ainsi que l'association Vision du Monde ? Bien sûr, je suis Emilie, chargée de programmes au sein de Vision du Monde depuis 3 ans. Je m'occupe principalement de l'Amérique Latine ...</p>
@@ -30,20 +30,20 @@
         <div class="bigCard">
             <section>
                 <h2 class="h2">TOP 5 DES CHOSES À FAIRE AU SALVADOR</h2>
-                <img src="img/photo3.jpg" alt="Volcan">
+                <img src="media/img/photo3.jpg" alt="Volcan">
                 <p class="cardp">Destination méconnue du grand public, le Salvador vous invite pour un voyage confidentiel et insolite. Pour vous guider dans votre préparation, voici quelques idées pour personnaliser votre circuit ! 5 choses à faire lors de votre prochain voyage au Salvador. Dégustez ...</p>
                 <a class="cardA cardASmall" href="">lire la suite</a>
             </section>
             <section>
                 <h2 class="h2">L’AUTHENTIQUE FÊTE DES LANTERNES AU SALVADOR</h2>
-                <img src="img/photo4.jpg" alt="Lanternes">
+                <img src="media/img/photo4.jpg" alt="Lanternes">
                 <P class="cardp">Vous aimez célébrer des fêtes authentiques et traditionnelles ? Je vous emmène aujourd’hui découvrir une des fêtes emblématiques du Salvador : el Día de los Farolitos ! La Fête des lanternes à Ahuachapan Cette tradition existe depuis plus de 150 ans. Chaque ...</P>
                 <a class="cardA cardASmall" href="">lire la suite</a>
             </section>
            
         </div>
         <section class="card">
-            <img src="img/photo2.jpg" alt="Catedrale">
+            <img src="media/img/photo2.jpg" alt="Catedrale">
             <div>
                 <h2 class="h2">EST-IL SÛR DE VOYAGER AU SALVADOR ?</h2>
                 <p class="cardp">Le plus petit pays d’Amérique Centrale est probablement aussi l’un des moins connus de la région. Sur la côte Pacifique entre le Guatemala et le Honduras, il offre un complément culturel et naturel aux autres pays de la région : région de montagne et café, volcans, villages coloniaux, artisanats et marchés, plages du Pacifique et cité maya de Joya del Ceren, unique dans la région (la lave d’un volcan a conservé ...</p>
@@ -53,13 +53,13 @@
         <div class="bigCard">
             <section>
                 <h2 class="h2">LA ROUTE DES FLEURS AU SALVADOR</h2>
-                <img src="img/photo5.jpg" alt="">
+                <img src="media/img/photo5.jpg" alt="">
                 <p class="cardp">Située dans la partie ouest du Salvador, entre les villages de Sonsonate et d'Ahuachapan, il existe une route bien particulière qui se couvre de magnifiques fleurs colorées entre décembre et janvier. S’étendant sur 36 kilomètres, la route des fleurs traverse ...</p>
                 <a class="cardA cardASmall"href="">Lire la suite</a>
             </section>
             <section>
                 <h2 class="h2">SUR LA ROUTE DES FLEURS ET DES VOLCANS </h2>
-                <img src="img/photo6.jpg" alt="">
+                <img src="media/img/photo6.jpg" alt="">
                 <p>Hélène notre spécialiste Mexique et Amérique Centrale c'est récemment rendue au Guatemala, au Belize et au Salvador pour y dénicher des bons plans, activités et coins sympas. Elle vous raconte la dernière étape de ce voyage: la Route des Fleurs, le ...</p>
                 <a class="cardA cardASmall"href="">Lire la suite</a>
             </section>
