ajout des photo de section du site japon dans le dosssier media + chemin fait dans le html et css

--- a/japon.html
+++ b/japon.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="japon.css">
+    <link rel="stylesheet" href="css/japon.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <title>Wanderer - Japon</title>
 </head>
 <body>
     <header>
         <div class="header-container">
-            <img class="logo" src="logo voyage 2-1.png" alt="logo">
+            <img class="logo" src="media/img/img-japon/logo voyage 2-1.png" alt="logo wanderer">
             <nav>
                 <ul class="navbar">
                     <li><a href="">Accueil</a></li>
@@ -68,7 +68,7 @@
         <section class="osaka">
             <div class="titre-villes"><h2>Osaka</h2></div>
             <div class="container-visit">
-                <img src="https://cdn.generationvoyage.fr/2019/06/endroits-japon-e1559893418945.jpg" alt="image de la ville d'Osaka">
+                <img src="media/img/img-japon/osaka.jpg" alt="image de la ville d'Osaka">
                 <div class="detail-box">
                     <p>
                         Troisième ville du Japon et grande métropole du Kansai, 
@@ -86,7 +86,7 @@
         <section class="nara">
             <div class="titre-villes"><h2>Nara</h2></div>
             <div class="container-visit reverse">
-                <img src="https://cdn.generationvoyage.fr/2019/06/endroits-japon1-e1559893771594.jpg" alt="image de la ville d'Osaka">
+                <img src="media/img/img-japon/nara.jpg" alt="image d'un cerf devant une tori de nara">
                 <div class="detail-box">
                     <p>
                         Située à moins d’une heure d’Osaka et de Kyoto, 
@@ -102,7 +102,7 @@
         <section class="kyoto">
             <div class="titre-villes"><h2>Kyoto</h2></div>
             <div class="container-visit">
-                <img src="https://cdn.generationvoyage.fr/2019/06/endroits-japon2-e1559894219646.jpg" alt="image de la ville d'Osaka">
+                <img src="media/img/img-japon/kyoto.jpg" alt="image d'une vu sur la ville de kyoto">
                 <div class="detail-box">
                     <p>
                         Impossible de visiter le Japon sans faire une halte à Kyoto ! 
@@ -119,7 +119,7 @@
         <section class="tokyo">
             <div class="titre-villes"><h2>Tokyo</h2></div>
             <div class="container-visit reverse">
-                <img src="https://cdn.generationvoyage.fr/2019/06/endroits-japon7-e1559897506825.jpg.webp" alt="image de la ville d'Osaka">
+                <img src="media/img/img-japon/tokyo.webp" alt="image de la rue d'une rue de tokyo de nuit">
                 <div class="detail-box">
                     <p>
                         Que serait le Japon sans Tokyo ? Symbole de l’ultra-modernité et de la démesure, 
@@ -134,7 +134,7 @@
         <section class="mont-fuji">
             <div class="titre-villes titre-large"><h2>Le Mont Fuji</h2></div>
             <div class="container-visit">
-                <img src="https://cdn.generationvoyage.fr/2019/04/Mont_Fuji_1554890299-e1554890308363.jpg.webp" alt="image de la ville d'Osaka">
+                <img src="media/img/img-japon/mont-fuji.webp" alt="vu sur le mont fuji">
                 <div class="detail-box">
                     <p>
                         Visiter le Japon sans venir saluer le mont Fuji serait un manque de respect pour les Japonais ! 
@@ -149,7 +149,7 @@
         <section class="itsukushima">
             <div class="titre-villes titre-large"><h2>Le temple d’Itsukushima</h2></div>
             <div class="container-visit reverse">
-                <img src="https://cdn.generationvoyage.fr/2019/06/endroits-japon14-e1559910946778.jpg" alt="image de la ville d'Osaka">
+                <img src="media/img/img-japon/itsukushima.jpg" alt="image de la tori d'itsukushima sur la mers">
                 <div class="detail-box">
                     <p>
                         Le temple d’Itsukushima est célèbre pour son torii rouge qui trône au milieu de l’eau.
@@ -162,7 +162,7 @@
         <section class="shirakawago">
             <div class="titre-villes titre-large"><h2>Shirakawago</h2></div>
             <div class="container-visit">
-                <img src="https://cdn.generationvoyage.fr/2019/06/endroits-japon5-e1559896594743.jpg" alt="image de la ville d'Osaka">
+                <img src="media/img/img-japon/shirakawago.jpg" alt="image de la ville de shirakawago">
                 <div class="detail-box">
                     <p>
                         Il n’y a pas que des temples au Japon ! 
@@ -176,7 +176,7 @@
         <section class="nikko">
             <div class="titre-villes"><h2>Nikko</h2></div>
             <div class="container-visit reverse">
-                <img src="https://cdn.generationvoyage.fr/2019/06/endroits-japon10-e1559901527314.jpg" alt="image de la ville d'Osaka">
+                <img src="media/img/img-japon/nikko.jpg" alt="image de chute d'eau de la nature nikko au japon">
                 <div class="detail-box">
                     <p>
                         Si vous souhaitez mêler culture et nature, Nikko est faite pour vous ! 
@@ -193,7 +193,7 @@
         <section class="hiroshima">
             <div class="titre-villes titre-large"><h2>Hiroshima</h2></div>
             <div class="container-visit">
-                <img src="https://cdn.generationvoyage.fr/2019/06/endroits-japon11-e1559902000795.jpg.webp" alt="image de la ville d'Osaka">
+                <img src="media/img/img-japon/hiroshima.webp" alt="ville d'hiroshima">
                 <div class="detail-box">
                     <p>
                         On ne la présente plus. Il peut sembler étonnant de trouver Hiroshima dans un 
@@ -206,9 +206,9 @@
             </div>
         </section>
         <section class="okinawa">
-            <div class="titre-villes titre-large"><h2>Onkinawa</h2></div>
+            <div class="titre-villes titre-large"><h2>Okinawa</h2></div>
             <div class="container-visit reverse">
-                <img src="https://cdn.generationvoyage.fr/2019/06/endroits-japon16-e1559911538372.jpg" alt="image de la ville d'Osaka">
+                <img src="media/img/img-japon/okinawa.jpg" alt="plage d'okinawa">
                 <div class="detail-box">
                     <p>
                         Des plages de sable blanc au Japon ? Non, vous ne rêvez pas ! 
@@ -221,7 +221,7 @@
         <section class="nagoya">
             <div class="titre-villes"><h2>Nagoya</h2></div>
             <div class="container-visit">
-                <img src="https://cdn.generationvoyage.fr/2019/06/shutterstock_1085404574-e1559894577753.jpg" alt="image de la ville d'Osaka">
+                <img src="media/img/img-japon/nagoya.jpg" alt="vu sur un temple de la ville de nagoya">
                 <div class="detail-box">
                     <p>
                         Autre métropole de l’île d’Honshu, Nagoya est pourtant différente de ses homologues japonaises. 
@@ -535,7 +535,7 @@
         <div class="container-footer">
             <div class="about-us">
                 <div class="box-logo">
-                    <img src="logo voyage 2-1.png" alt="logo wanderers">
+                    <img src="media/img/img-japon/logo voyage 2-1.png" alt="logo wanderers">
                 </div>
                 <div class="text-about-us">
                     <p>
