ajout des liens sur les page des autres pays dans la nav de japon.html + ajout du smooth scroll vers contact du footer dans japon.css

--- a/japon.html
+++ b/japon.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/japon.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>-->
     <title>Wanderer - Japon</title>
 </head>
 <body>
@@ -14,14 +14,14 @@
             <img class="logo" src="media/img/img-japon/logo voyage 2-1.png" alt="logo wanderer">
             <nav>
                 <ul class="navbar">
-                    <li><a href="">Accueil</a></li>
+                    <li><a href="index.html">Accueil</a></li>
                     <li>
                         <a href="">Continents</a>
                         <ul class="sous-menu">
                             <li><a href="europe.html">Europe</a></li>
-                            <li><a href="asie.html">Asie</a></li>
-                            <li><a href="amerique-centrale.html">Amérique Centrale</a></li>
-                            <li><a href="outre-mer.html">Outre-Mer</a></li>  
+                            <li><a href="japon.html">Asie</a></li>
+                            <li><a href="salvador.html">Amérique Centrale</a></li>
+                            <li><a href="polynesie.html">Outre-Mer</a></li>  
                         </ul>
                     </li>
                     <li>
@@ -31,7 +31,7 @@
                             <li><a href="polynesie.html">Fériale</a></li>
                             <li><a href="japon.html">Ibni</a></li>
                             <li><a href="salvador.html">Jérôme</a></li>
-                            <li><a href="grece.html">Joris</a></li>
+                            <li><a href="grèce.html">Joris</a></li>
                         </ul>
                     </li>
                     <li><a href="#contact">Contact</a></li>
