ajout du lien accueil

--- a/salvador.html
+++ b/salvador.html
@@ -12,7 +12,8 @@
     <header>
         <h1>Voyage Salvador</h1>
         <nav>
-            <a class="firstA" href="">Destination</a>
+            <a class="firstA" href="index.html">Accueil</a>
+            <a href="">Destination</a>
             <a href="">Inspiration</a>
             <a href="">Récits de voyage</a>
         </nav>
