--- a/france.html
+++ b/france.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>France | Wanderer</title>
     <link rel="stylesheet" href="css/voyages.css">
+    <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/france.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
@@ -94,5 +95,22 @@
                 </article>
         </section>
     </main>
+    <footer>
+        <div class="footer">
+            <div class="description">
+                <p><span class="mark">Wanderer</span> est une agence spécialisé dans le voyage sur-mesure en Amérique du Nord,  Latine, en Asie et en Europe. Voyagez comme vous l’imaginez avec <span class="mark">Wanderer</span>.</p>
+            </div>
+            <div class="description">
+                <p>NEWSLETTER</p>
+                <a class="newlester" href="">je m'inscris a la newslester</a>
+            </div>
+            <address class="description">
+                <p class="contacte">Contact france</p>
+                <p>04 50 46 90 28</p>
+                <p>info@wanderer.io</p>
+            </address>
+        </div>
+        <p class="droit">Jérome LACROIX, Félix HAUGER, Ibni-Yamine CHABANE, Fériale BOUREGA, Joris LANDARET, formation Start</p>
+    </footer>
 </body>
 </html>
