ajouté image salvador dans le dossier du repo

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         <a href="grèce.html"><img src="https://www.tourmag.com/photo/art/grande/58796297-43317668.jpg?v=1631105192" alt="image d'une ville de grece"></a>
                     </li>
                     <li class="img4">
-                        <a href="salvador.html"><img src="https://chat.google.com/u/0/api/get_attachment_url?url_type=FIFE_URL&content_type=image%2Fjpeg&attachment_token=AAigNUQUjCGTMGB9a4YVfoXdMFerw8BVQwZ9AghKOXjIDgFPSl1vV5DQHkTtk3bdT9sHFoNDTLHBJd49zhR%2FnV8p6J202umUfxXzG4jTK1TUQbgXlUAow8gPKXsvqAo3RzM%2Fyd%2FzIv1JbeV5guf%2BHejUb9xTKhdHm40TietnnVXiBBqnDzIqnNy2zeUESbbhokxRF8%2FYSEcsP4h%2FwXizrQS4BY2OewTkdylffpDsx94bYDd%2FrqFhy1lc5qcCOSL%2BddbnaJfluAug9gxMojOtmmLfaEgU%2FEgolK9bEB4XrBqE%2Bi0Omi0Hsrq73EzUgehVh9jIqr6VhMI4TAdF1L%2Ff4gdKnjE8%2FceheAaMFcWZ4U1A2hXccjuQQ%2F%2F8dLVMadup1kBUHuaYwihg03%2F%2F9sgDhFKlzcL0vz8QORdk8yB7cRUuC7onn%2F6lEdo2ke8EXygUiUQVNO0wS6qp0cb7KEaG08MJyqDZ3Je1qpzQbagulhD9i26WbCCOtMSCYWHijAG2eEkx7Vnqfo0pZRn%2FW29LQBbTIJYwRUSrJHVOiL0oLnyIsaBpuunoELkytc90OzCkhf3Pkh4%2BPqem5a3NkaZKmoezMv4C3fRbpKrO84js9tH8swR2TQ8muueKGBll4DoLzR7jhuZ%2BfLHGJaVj3QPTQgr%2FpU9WuyBgkDJbUq2ToT3RJ2c1dR0iDN0%2Bu2wA70XDiOdlErDKqzb2Y3p2ewwwaoi3yi%2FtCCkLn4tBSPdVwQ%3D%3D&sz=w512" alt="image d'une ville dans le salvador"></a>
+                        <a href="salvador.html"><img src="media/img/salvador_ville.jpg" alt="image d'une ville dans le salvador"></a>
                     </li>
                     <li class="img5">
                         <a href="polynesie.html"><img src="https://cdn.sortiraparis.com/images/80/1462/559917-la-polynesie-francaise-rouvre-ses-frontieres.jpg" alt="plage de la polynésie"></a>
