corrigé nom image drapeau dans index.html

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <img class="cartedumonde" src="media/img/world-map-146505_1280.webp" alt="cartedumonde">
             </div>           
             <div class="divdrapeaux">
-                <a class="" href="france.html"><img class="france" src="media/img/france.png" alt="france"></a>
+                <a class="" href="france.html"><img class="france" src="media/img/France.png" alt="france"></a>
                 <a class="" href="grèce.html"><img class="france" src="media/img/grece.png" alt="grece"></a>
                 <a class="" href="japon.html"><img  class="france" src="media/img/ja.png" alt="japon"></a>
                 <a class="" href="polynesie.html"><img class="france" src="media/img/poly.png" alt="poly"></a>
