--- a/japon.html
+++ b/japon.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/japon.css">
     <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>-->
     <title>Wanderer - Japon</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header>
