modifié footer dans page france

--- a/france.html
+++ b/france.html
@@ -96,21 +96,49 @@
         </section>
     </main>
     <footer>
-        <div class="footer">
-            <div class="description">
-                <p><span class="mark">Wanderer</span> est une agence spécialisé dans le voyage sur-mesure en Amérique du Nord,  Latine, en Asie et en Europe. Voyagez comme vous l’imaginez avec <span class="mark">Wanderer</span>.</p>
+        <div class="container-footer">
+            <div class="about-us">
+                <div class="box-logo">
+                    <img src="media/img/img-japon/logo voyage 2-1.png" alt="logo wanderers">
+                </div>
+                <div class="text-about-us">
+                    <p>
+                        Wanderer est une agence Fictive spécialisé dans le voyage sur-mesure en Amérique du Nord, 
+                        Latine, en Asie et en Europe. Voyagez comme vous l’imaginez avec Wanderer.
+                    </p>   
+                </div>
             </div>
-            <div class="description">
-                <p>NEWSLETTER</p>
-                <a class="newlester" href="">je m'inscris a la newslester</a>
+            <div class="box-continent">
+                <h3>Continents</h3>
+                <ul>
+                    <li><a href="">Europe</a></li>
+                    <li><a href="">Asie</a></li>
+                    <li><a href="">Amerique Centrale</a></li>
+                    <li><a href="">Outre-Mer</a></li>
+                </ul>
             </div>
-            <address class="description">
-                <p class="contacte">Contact france</p>
-                <p>04 50 46 90 28</p>
-                <p>info@wanderer.io</p>
-            </address>
+            <div class="box-wanderers">
+                <h3>Wanderers</h3>
+                <ul>
+                    <li><a href="">Félix</a></li>
+                    <li><a href="">Fériale</a></li>
+                    <li><a href="">Ibni</a></li>
+                    <li><a href="">Jérôme</a></li>
+                    <li><a href="">Joris</a></li>
+                </ul>
+            </div>
+            <div id="contact" class="footer-right">
+				<h3>Contact</h3>
+				<form action="#" method="post">
+					<input type="text" name="email" placeholder="Email">
+					<textarea name="message" placeholder="Message"></textarea>
+					<button>Envoyer</button>
+				</form>
+			</div>
         </div>
-        <p class="droit">Jérome LACROIX, Félix HAUGER, Ibni-Yamine CHABANE, Fériale BOUREGA, Joris LANDARET, formation Start</p>
-    </footer>
+        <div class="not-copyright">
+            <p>Not a Copyright © 2022 All Rights Not Reserved by Wanderer.</p>
+        </div>
+    </footer>  
 </body>
 </html>
