corrigé typo dans page france & japon

--- a/japon.html
+++ b/japon.html
@@ -540,7 +540,7 @@
                 </div>
                 <div class="text-about-us">
                     <p>
-                        Wanderer est une agence Fictive spécialisé dans le voyage sur-mesure en Amérique du Nord, 
+                        Wanderer est une agence Fictive spécialisée dans le voyage sur-mesure en Amérique du Nord, 
                         Latine, en Asie et en Europe. Voyagez comme vous l’imaginez avec Wanderer.
                     </p>   
                 </div>
