ajouté favicon pour salvador & grèce

--- a/grèce.html
+++ b/grèce.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/voyages.css">
     <link href="css/grèce.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="css/footer.css">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   </head>
 
   <body>
