--- a/salvador.html
+++ b/salvador.html
@@ -7,6 +7,7 @@
     <title>Salvador</title>
     <link rel="stylesheet" href="css/salvador.css">
     <link href="https://fonts.googleapis.com/css2?family=Asap&family=Roboto:wght@100;900&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header>
