correction des liens du footer & de quelques coquilles

--- a/france.html
+++ b/france.html
@@ -112,19 +112,19 @@
                 <h3>Continents</h3>
                 <ul>
                     <li><a href="">Europe</a></li>
-                    <li><a href="">Asie</a></li>
-                    <li><a href="">Amerique Centrale</a></li>
+                    <li><a href="japon.html">Asie</a></li>
+                    <li><a href="salvador.html">Amérique Centrale</a></li>
                     <li><a href="">Outre-Mer</a></li>
                 </ul>
             </div>
             <div class="box-wanderers">
                 <h3>Wanderers</h3>
                 <ul>
-                    <li><a href="">Félix</a></li>
+                    <li><a href="france.html">Félix</a></li>
                     <li><a href="">Fériale</a></li>
-                    <li><a href="">Ibni</a></li>
-                    <li><a href="">Jérôme</a></li>
-                    <li><a href="">Joris</a></li>
+                    <li><a href="japon.html">Ibni</a></li>
+                    <li><a href="salvador.html">Jérôme</a></li>
+                    <li><a href="grèce.html">Joris</a></li>
                 </ul>
             </div>
             <div id="contact" class="footer-right">
