--- a/grèce.html
+++ b/grèce.html
@@ -285,11 +285,11 @@
           <div class="box-wanderers">
               <h3>Wanderers</h3>
               <ul>
-                  <li><a href="">Félix</a></li>
+                  <li><a href="france.html">Félix</a></li>
                   <li><a href="">Fériale</a></li>
-                  <li><a href="">Ibni</a></li>
-                  <li><a href="">Jérôme</a></li>
-                  <li><a href="">Joris</a></li>
+                  <li><a href="japon.html">Ibni</a></li>
+                  <li><a href="salvador.html">Jérôme</a></li>
+                  <li><a href="grèce.html">Joris</a></li>
               </ul>
           </div>
           <div id="contact" class="footer-right">
