--- a/salvador.html
+++ b/salvador.html
@@ -62,7 +62,7 @@
             <section>
                 <h2 class="h2">SUR LA ROUTE DES FLEURS ET DES VOLCANS </h2>
                 <img src="media/img/photo6.jpg" alt="">
-                <p>Hélène notre spécialiste Mexique et Amérique Centrale c'est récemment rendue au Guatemala, au Belize et au Salvador pour y dénicher des bons plans, activités et coins sympas. Elle vous raconte la dernière étape de ce voyage: la Route des Fleurs, le ...</p>
+                <p>Hélène notre spécialiste Mexique et Amérique Centrale s'est récemment rendue au Guatemala, au Belize et au Salvador pour y dénicher des bons plans, activités et coins sympas. Elle vous raconte la dernière étape de ce voyage: la Route des Fleurs, le ...</p>
                 <a class="cardA cardASmall"href="">Lire la suite</a>
             </section>
         </div>
@@ -72,14 +72,14 @@
     <footer>
         <div class="footer">
             <div class="description">
-                <p> Voyage est une agence spécialisé dans le voyage sur-mesure en Amérique du Nord,  Latine, en Asie et en Europe. Voyagez comme vous l’imaginez avec Voyage.</p>
+                <p> Voyage est une agence spécialisé dans le voyage sur-mesure en Amérique du Nord, Latine, en Asie et en Europe. Voyagez comme vous l’imaginez avec Voyage.</p>
             </div>
             <div class="description">
                 <p>NEWSLETTER</p>
-                <a class="newlester" href="">je m'inscris a la newslester</a>
+                <a class="newlester" href="">Je m'inscris a la newsletter</a>
             </div>
             <div class="description">
-                <p class="contacte">Contact france</p>
+                <p class="contacte">Contact France</p>
                 <p>04 50 46 90 28</p>
                 <p>info@wanderer.io</p>
             </div>
