ajout du footer

--- a/polynesie.html
+++ b/polynesie.html
@@ -188,22 +188,49 @@ De la pension de famille de Taha'a, verdoyante île escarpée, au resort de la c
             </p>
      </div>
      <footer>
-        <div class="footer">
-            <div class="description">
-                <p> Voyage est une agence spécialisé dans le voyage sur-mesure en Amérique du Nord,  Latine, en Asie et en Europe. Voyagez comme vous l’imaginez avec Voyage.</p>
+        <div class="container-footer">
+            <div class="about-us">
+                <div class="box-logo">
+                    <img src="media/img/img-japon/logo voyage 2-1.png" alt="logo wanderers">
+                </div>
+                <div class="text-about-us">
+                    <p>
+                        Wanderer est une agence Fictive spécialisée dans le voyage sur-mesure en Amérique du Nord, 
+                        Latine, en Asie et en Europe. Voyagez comme vous l’imaginez avec Wanderer.
+                    </p>   
+                </div>
             </div>
-            <div class="description">
-                <p>NEWSLETTER</p>
-                <a class="newlester" href="">je m'inscris a la newslester</a>
+            <div class="box-continent">
+                <h3>Continents</h3>
+                <ul>
+                    <li><a href="">Europe</a></li>
+                    <li><a href="">Asie</a></li>
+                    <li><a href="">Amerique Centrale</a></li>
+                    <li><a href="">Outre-Mer</a></li>
+                </ul>
             </div>
-            <div class="description">
-                <p class="contacte">Contact france</p>
-                <p>04 50 46 90 28</p>
-                <p>info@al-voyage.com</p>
+            <div class="box-wanderers">
+                <h3>Wanderers</h3>
+                <ul>
+                    <li><a href="france.html">Félix</a></li>
+                    <li><a href="">Fériale</a></li>
+                    <li><a href="japon.html">Ibni</a></li>
+                    <li><a href="salvador.html">Jérôme</a></li>
+                    <li><a href="grèce.html">Joris</a></li>
+                </ul>
             </div>
+            <div id="contact" class="footer-right">
+				<h3>Contact</h3>
+				<form action="#" method="post">
+					<input type="text" name="email" placeholder="Email">
+					<textarea name="message" placeholder="Message"></textarea>
+					<button>Envoyer</button>
+				</form>
+			</div>
         </div>
-        <p class="droit">Jérome LACROIX,Félix HAUGIER,Ibni-Yamine CHABANE,Fériale BOUREGA, Joris Landaret,formation Start</p>
-    </footer>
-    
+        <div class="not-copyright">
+            <p>Not a Copyright © 2022 All Rights Not Reserved by Wanderer.</p>
+        </div>
+    </footer>    
 </body>
 </html>
