--- a/polynesie.html
+++ b/polynesie.html
@@ -45,6 +45,12 @@
             </nav>
         </div>
     </header>
+    <div class="container">
+        <img  class="img1" src="img/polynésiehead.jpg">
+        <div class="text">
+        <h1>Polynésie</h1>
+        </div>
+    </div>
     
         
     <section class="container2">
