changement et deplacement des images dans media

--- a/polynesie.html
+++ b/polynesie.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wanderer</title>
     <link rel="stylesheet" href="css/voyages.css">
-    <link rel="stylesheet" href="polynesie.css">
+    <link rel="stylesheet" href="css/polynesie.css">
 </head>
 <body>
     <header>
@@ -46,7 +46,7 @@
         </div>
     </header>
     <div class="container">
-        <img  class="img1" src="img/polynésiehead.jpg">
+        <img  class="img1" src="media/img/img-polynesie/polynésiehead.jpg">
         <div class="text">
         <h1>Polynésie</h1>
         </div>
@@ -67,7 +67,7 @@
         </ul>  
   </section>
   <h3 class="flip-scale-up-hor">Les lieux polynésiens incontournables</h3>
-  <div class="container3"><img src="img/polynésie.jpg" width="400px"  height="350px">
+  <div class="container3"><img src="media/img/img-polynesie/polynésie.jpg" width="400px"  height="350px">
   <p class="p1">Des îles enchanteresses et attachantes nimbées de mystère, aux doux noms d’« îles Sous-le-Vent », « Marquises », 
   « îles Gambier », « îles Australes »... Une végétation luxuriante contrastant avec des plages de sable blanc
    frangées de cocotiers posées à fleur d’eau aux mille nuances de bleu… La réputation de la Polynésie française
@@ -86,7 +86,7 @@ De la pension de famille de Taha'a, verdoyante île escarpée, au resort de la c
   </div>
   <div class="container4">
     <h4>Tahiti</h4>
-    <img class="img2" src="img/tahiti.jpg"  width="600px"  height="450px" >
+    <img class="img2" src="media/img/img-polynesie/tahiti.jpg"  width="600px"  height="450px" >
     <p class="p1">Bienvenue à Tahiti, la plus grande île de l’archipel, porte d’entrée de la Polynésie française. Ici, on vous
          accueille traditionnellement avec un collier de fleurs… et vous entrez immédiatement dans l’ambiance 
          polynésienne ! Pour un séjour ou un voyage de noces au paradis, plongez dans notre offre de voyages à 
@@ -109,7 +109,7 @@ De la pension de famille de Taha'a, verdoyante île escarpée, au resort de la c
   
     <h5>Moorea</h5>
     <div class="container5">
-    <img src="img/moorea.jpg" width="400px" height="400px">
+    <img src="media/img/img-polynesie/moorea.jpg" width="400px" height="400px">
     <p class="p2">
         La traversée en ferry depuis Papeete ensorcelle, quand se découpe à l’horizon la silhouette de Moorea...
          Entre lagon au dégradé de couleurs allant de l’émeraude au turquoise, plages de sable blanc et jardins
@@ -128,7 +128,7 @@ De la pension de famille de Taha'a, verdoyante île escarpée, au resort de la c
   </div>
   <div class="container6">
     <h6>Bora bora</h6>
-    <img class="img3" src="img/borabora.jpg" width="600px"  height="500px">
+    <img class="img3" src="media/img/img-polynesie/borabora.jpg" width="600px"  height="500px">
     <p class="p1">
         C’est un lagon sublime, sans doute le plus beau du monde, que l’on découvre d’abord lors d’un voyage à Bora Bora, en se posant sur le motu de l’aéroport. Un lagon ourlé de plages de sable blanc, dont la symphonie de bleus
          est rehaussée par la silhouette sombre de son volcan, où les plongées sont magiques, dans les eaux chaudes et
@@ -165,12 +165,12 @@ De la pension de famille de Taha'a, verdoyante île escarpée, au resort de la c
                 plus beaux souvenirs de votre séjour polynésien.
             
              </p>
-        <img  src="img/plages.jpg"  width="400px"  height="400px">
+        <img  src="media/img/img-polynesie/plages.jpg"  width="400px"  height="400px">
     </div>
      
         <h8 class="flip-scale-up-hor">Voyage plongée Polynésie</h8>
         <div class="container7">
-        <img src="img/plongée.jpg" width="400px"  height="400px"  >
+        <img src="media/img/img-polynesie/plongée.jpg" width="400px"  height="400px"  >
         <p class="p1">Lagons cristallins ceinturés par une longue barrière de corail, plages étincelantes, motus déserts et
              plongées sensationnelles dans les plus beaux spots de la planète : la Polynésie est un véritable
               aquarium naturel qui cristallise tous les rêves des plongeurs en quête de paradis marins. Poissons
